--- a/averise/src/App.css
+++ b/averise/src/App.css
@@ -1,8 +1,7 @@
 .main{
-  background-image: url("./assets/bg2.jpg");
+  background-image: url("./assets/v300batch2-nunoon-13.jpg");
   background-size: cover;
   background-attachment: fixed;
-  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.8) !important;
   height :100%;
 }
 :root {
