--- a/averise/src/App.css
+++ b/averise/src/App.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=DM+Serif+Text:ital@0;1&family=Great+Vibes&family=Mynerve&family=Questrial&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=DM+Serif+Text:ital@0;1&family=Great+Vibes&family=Mynerve&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Questrial&display=swap');
+
 html {
   scroll-behavior: smooth;
 }
 .main{
+    background-color: rgb(240, 240, 240);
 }
 :root {
   font-family: "Poppins", sans-serif;
@@ -28,3 +32,17 @@ html {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);}
+
+.dm-serif-text-regular {
+  font-family: "DM Serif Text", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.playwrite-gb-s {
+                   font-family: "Playwrite GB S", cursive;
+                   font-optical-sizing: auto;
+                   font-weight: 400;
+                   font-style: normal;
+                 }
+
