--- a/averise/src/App.css
+++ b/averise/src/App.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=DM+Serif+Text:ital@0;1&family=Great+Vibes&family=Mynerve&family=Questrial&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=DM+Serif+Text:ital@0;1&family=Great+Vibes&family=Mynerve&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Questrial&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=DM+Serif+Text:ital@0;1&family=Great+Vibes&family=Mynerve&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Questrial&display=swap');
 
 html {
   scroll-behavior: smooth;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 .main{
     background-color: rgb(240, 240, 240);
@@ -39,10 +43,8 @@ html {
   font-style: normal;
 }
 
-.playwrite-gb-s {
-                   font-family: "Playwrite GB S", cursive;
-                   font-optical-sizing: auto;
-                   font-weight: 400;
-                   font-style: normal;
-                 }
-
+.poppins-regular {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
